...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Manage, Explore, and Create!"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

            <TextView
                android:id="@+id/organizersSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="Organized Events"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                android:id="@+id/eventCreateCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Total Events Created: 0"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/eventEntrantsCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="Total Event Entrants: 0"
                android:textAlignment="textStart"
...
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

        <TextView
            android:id="@+id/entrantsSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Joined Events"
            android:textStyle="bold"
            android:padding="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/anEntrantCount"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:text="Total Events Joined: 0"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/wonLotteryCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="Total Event Lottery Wins: 0"
                android:textAlignment="textStart"
...
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

            <TextView
                android:id="@+id/invitationsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Invitations"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/invitationsCount"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:text="Pending Invitations: 0"
                android:textAlignment="textStart"
                android:layout_marginBottom="10dp"
...
