...

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_images" />

        <item
            android:id="@+id/nav_browse_event"
            android:icon="@drawable/ic_menu_list"
...
        <item
            android:id="@+id/nav_browse_profiles"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_profiles" />

        <item
            android:id="@+id/adminBrowseFacilitiesFragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_facilities" />
    </group>
</menu>
